--- a/index.html
+++ b/index.html
@@ -1,86 +1,35 @@
-/* Global Styles */
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-  margin: 0;
-  padding: 0;
-  color: #000;
-  transition: background-color 0.3s, color 0.3s;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login & Username</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="script.js"></script>
+</head>
+<body>
+  <button id="themeToggle" class="theme-button">🌙</button>
+  
+  <div class="container">
+    <h1>Login</h1>
+    <form id="loginForm">
+      <label for="phone">Nomor Telepon</label>
+      <input type="text" id="phone" name="phone" placeholder="Contoh: 6281234567890" required>
+      <button type="submit">Login</button>
+    </form>
+    <div id="notRegistered" style="display: none;">
+      <p>Nomor telepon Anda belum terdaftar.</p>
+    </div>
 
-.container {
-  max-width: 500px;
-  margin: 50px auto;
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-form label {
-  display: block;
-  margin: 10px 0 5px;
-}
-
-form input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-form button {
-  width: 100%;
-  padding: 10px;
-  background: #007BFF;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #0056b3;
-}
-
-.theme-button {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  font-size: 24px;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dark Theme */
-body.dark-theme {
-  background-color: #2c2c2c;
-  color: #fff;
-}
-
-body.dark-theme .container {
-  background: #444;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-body.dark-theme form input {
-  background: #555;
-  color: #fff;
-  border: 1px solid #777;
-}
-
-body.dark-theme form button {
-  background: #0056b3;
-}
-
-body.dark-theme button:hover {
-  background: #003f8a;
-}
+    <h1>Buat Username</h1>
+    <form id="createUserForm">
+      <label for="username">Masukkan Username</label>
+      <input type="text" id="username" name="username" placeholder="Username" required>
+      <button type="submit">Buat Username</button>
+    </form>
+    <div id="result" style="display: none;">
+      <p id="successMessage">Sukses menambahkan username!</p>
+    </div>
+  </div>
+</body>
+</html>
