--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
-<body><button id="themeToggle" class="theme-button">
-  <svg id="themeIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
-    <!-- Ikon Matahari (Default) -->
-    <path d="M12 4a1 1 0 01-1-1V2a1 1 0 112 0v1a1 1 0 01-1 1zM12 22a1 1 0 01-1-1v-1a1 1 0 112 0v1a1 1 0 01-1 1zM4.22 4.22a1 1 0 01-.02-1.41l.7-.7a1 1 0 111.42 1.42l-.7.7a1 1 0 01-1.4-.01zM20.48 19.6a1 1 0 01-.02-1.41l.7-.7a1 1 0 111.42 1.42l-.7.7a1 1 0 01-1.4-.01zM4 12a1 1 0 01-1-1H2a1 1 0 010-2h1a1 1 0 011 1zM22 12a1 1 0 01-1-1h1a1 1 0 010 2h-1a1 1 0 01-1-1zM4.22 19.78a1 1 0 01-.02-1.41l.7-.7a1 1 0 111.42 1.42l-.7.7a1 1 0 01-1.4-.01zM20.48 4.4a1 1 0 01-.02-1.41l.7-.7a1 1 0 111.42 1.42l-.7.7a1 1 0 01-1.4-.01zM12 6a6 6 0 100 12 6 6 0 000-12z" />
-  </svg>
-</button>
+<body><button id="themeToggle" class="theme-button">☀︎</button>
 
-  
   <div class="container">
     <h1>Login</h1>
     <form id="loginForm">
       <label for="phone">Nomor Telepon</label>
-      <input type="text" id="phone" name="phone" placeholder="Contoh: 6281234567890" required>
+      <input type="text" id="phone" name="phone" placeholder="Contoh: 628xxxxxx" required>
       <button type="submit">Login</button>
     </form>
     <div id="notRegistered" style="display: none;">
@@ -29,7 +23,7 @@
     <h1>Buat Username</h1>
     <form id="createUserForm">
       <label for="username">Masukkan Username</label>
-      <input type="text" id="username" name="username" placeholder="Username" required>
+      <input type="text" id="username" name="username" placeholder="Create Username" required>
       <button type="submit">Buat Username</button>
     </form>
     <div id="result" style="display: none;">
