--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Furina AI - Login & cUsername</title>
+  <title>Furina AI - Login & Username</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Tombol Tema -->
   <button id="themeToggle" class="theme-button">☀︎</button>
 
   <div class="container">
-    <!-- Form Login -->
     <div id="loginSection">
       <h1>Login</h1>
       <form id="loginForm">
@@ -20,38 +18,25 @@
         <button type="submit">Login</button>
       </form>
       <div id="notRegistered" style="display: none;">
-      <p>Nomor telepon Anda belum terdaftar.</p>
-      <button onclick="redirectWhatsApp()">WhatsApp</button>
-      <button onclick="redirectTelegram()">Telegram</button>
+        <p>Nomor telepon Anda belum terdaftar.</p>
+        <button onclick="redirectWhatsApp()">WhatsApp</button>
+        <button onclick="redirectTelegram()">Telegram</button>
+      </div>
     </div>
-    </div>
-    <!-- Form Username (Tersembunyi sebelum login) -->
+
     <div id="usernameSection" style="display: none;">
       <h1>Buat Username</h1>
       <button id="createUserButton">Buat Username</button>
       <div id="credentials" style="display: none;">
-        <strong>Username:</strong> <span id="username"></span> 
-        <button onclick="copyToClipboard('username')">Copy Username</button>
+        <p><strong>Username:</strong> <span id="username"></span></p>
+        <button id="copyUsernameButton" style="display: none;">Copy Username</button>
+        <div id="ipOption" style="display: none;">
+          <p>Tambahkan IP Address:</p>
+          <button id="addIpButton">Tambahkan IP</button>
+        </div>
       </div>
     </div>
   </div>
-
-    function redirectWhatsApp() {
-      window.open('https://wa.me/6285921655444', '_blank');
-    }
-
-    function redirectTelegram() {
-      window.open('https://t.me/kyzryzz', '_blank');
-    }
-
-    function copyToClipboard(elementId) {
-      const text = document.getElementById(elementId).textContent;
-      navigator.clipboard.writeText(text).then(() => {
-        alert(`${elementId.charAt(0).toUpperCase() + elementId.slice(1)} berhasil disalin.`);
-      }).catch(err => {
-        alert('Gagal menyalin teks.');
-        console.error(err);
-      });
 
   <script src="script.js"></script>
 </body>
