--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <button type="submit">Login</button>
       </form>
       <div id="notRegistered" style="display: none;">
-        <p>Nomor telepon Anda belum terdaftar.</p>
-        <button onclick="redirectWhatsApp()">WhatsApp</button>
-        <button onclick="redirectTelegram()">Telegram</button>
+        <p>Nomor telepon Anda belum terdaftar. silakan hubungi Owner!</p>
+        <button onclick="redirectWhatsApp()">Hubungi di WhatsApp</button>
+        <button onclick="redirectTelegram()">Hubungi di Telegram</button>
       </div>
     </div>
 
