--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1>Buat Username</h1>
       <form id="usernameForm">
         <label for="newUsername">Masukkan Username</label>
-        <input type="text" id="newUsername" name="newUsername" placeholder="Masukkan username" required>
+        <input type="text" id="newUsername" name="newUsername" placeholder="buat username anda" required>
         <button type="submit">Tambahkan Username</button>
       </form>
       <div id="usernameResult" style="display: none;">
