--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
   <script>
     function redirectWhatsApp() {
-      window.location.href = "https://wa.me/6285921655444"; 
+      window.location.href = "https://wa.me/628xxxxxxxx?text=Halo,%20saya%20ingin%20mendaftarkan%20nomor%20saya.";
     }
 
     function redirectTelegram() {
-      window.location.href = "https://t.me/kyzryzz";
+      window.location.href = "https://t.me/usernameOwner";
     }
   </script>
   
